@@ -1,3 +1,9 @@
+2020-10-29  Frank Ch. Eigler  <fche@redhat.com>
+
+	PR26810
+	* run-debuginfod-find.sh: Add tests for successful archive fetches across
+	renamed RPMs, even without grooming.
+
 2020-10-25  Mark Wielaard  <mark@klomp.org>
 
 	* read_unaligned.c: New test.
